--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+env_pyside2/
 
 # Spyder project settings
 .spyderproject
@@ -167,3 +168,4 @@ cython_debug/
 
 Data/
 **/.DS_Store
+
